#318 - Fix small hints that were found by the SonarLint plugin.